fix layout on smaller desktop

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,7 @@
   html,
   body,
   #root {
-    height: 100vh;
-    width: auto;
+    height: 100%;
     margin: 0;
     padding: 0;
   }
